# communauto-alert

./: README.md  pyproject.toml
communauto_alert/: bell.py  cli.py  core.py  exceptions.py  main.py  notifications.py  vehicle.py  vehicles.py
communauto_alert/resources/: notifications.yaml
tests/: test.py
